[package]
name = "isom_rocket_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


#figment = { version = "0.9", features = ["env", "toml", "json"] }

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["tls"] }
# Ring
#ring = { version = "0.16", optional = true }
